force-app/main/default/objects/Referral_Discount__c/Referral_Discount__c.object-meta.xml
<CustomObject>
    <label>Referral Discount</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>