force-app/main/default/objects/Referral_Discount__c/fields/Amount_after_GST__c.field-meta.xml
<CustomField>
    <fullName>Amount_after_GST__c</fullName>
    <formula>IF(Discount_Amount_Referee__c &gt; 0, IF( GST__c &gt; 0,  Discount_Amount_Referee__c  +  GST__c ,  Discount_Amount_Referee__c  + 0)  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount after GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>