force-app/main/default/objects/Referral_Discount__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Referral Discounts</relationshipLabel>
    <relationshipName>Referral_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>