force-app/main/default/objects/Referral_Discount__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <label>Default</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>