force-app/main/default/objects/Referral_Discount__c/fields/Discount_Amount_Referee_wGST__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Referee_wGST__c</fullName>
    <formula>Discount_Amount_Referee__c +( Discount_Amount_Referee__c *   Country__r.Tax_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To work out the price without GST you have to divide the amount by 1. (Tax Rate) i.e. 1.07. E.g. ($214/1.07=$200)</inlineHelpText>
    <label>Discount Amount (Referee) wGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>