force-app/main/default/objects/Referral_Discount__c/fields/Discount_Amount_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Referrer__c</fullName>
    <description>This field is used to store the Discount amount of Referrer</description>
    <inlineHelpText>To work out the price without GST you have to divide the amount by 1. (Tax Rate) i.e. 1.07. E.g. ($214/1.07=$200)</inlineHelpText>
    <label>Discount Amount (Referrer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>