force-app/main/default/objects/Referral_Discount__c/fields/Discount_Amount_Referrer_wGST__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Referrer_wGST__c</fullName>
    <formula>Discount_Amount_Referrer__c  +( Discount_Amount_Referrer__c *   Country__r.Tax_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount (Referrer) wGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>