force-app/main/default/objects/Referral_Discount__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <formula>IF( Discount_Amount_Referee__c &gt; 0,  IF( Country__r.Tax_Rate__c &gt; 0,  Discount_Amount_Referee__c *  Country__r.Tax_Rate__c , 0) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>