force-app/main/default/objects/Referral_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Default__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Country__c</columns>
    <columns>Discount_Amount_Referee__c</columns>
    <columns>Discount_Amount_Referrer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>